MDEV-36227 Race condition between ALTER TABLE…EXCHANGE PARTITION and SELECT

In commit 6e6a1b316ca8df5116613fbe4ca2dc37b3c73bd1 (MDEV-35000)
a race condition was exposed.

ha_innobase::check_if_incompatible_data(): If the statistics have
already been initialized for the table, skip the invocation of
innobase_copy_frm_flags_from_create_info() in order to avoid
unexpectedly ruining things for other threads that are concurrently
accessing the table.

dict_stats_save(): Add debug instrumentation that is necessary for
reproducing the interlocking of the failure scenario.